(ocamllex
 (modules lexer))

(menhir
 (modules tokens)
 (flags --only-tokens)
 (explain false))

; Use --fixed-exception so we can handle parsing errors as Parsing.Parse_error
; when we don't have access to a Parser instance.

(menhir
 (modules tokens parser)
 (merge_into parser)
 (flags --fixed-exception --external-tokens Tokens --table --strict))

(library
 (name stlc2m)
 (inline_tests)
 (modules
  int_id_intf
  int_id
  parse_env_intf
  parse_env
  tokens
  compile
  id_gen
  server
  ast
  ast_index_intf
  ast_index
  diag_intf
  diag
  checker_intf
  checker
  parser
  lexer
  checker_report_intf
  checker_report
  diag_core_intf
  diag_core
  diag_render
  diag_json
  ast_index_util
  actions
  action_id
  action_registry
  snapshot_id
  snapshot_registry
  actions_core
  actions_render
  json_common
  actions_json
  action_kind
  pretty
  text_edit
  diff_synth)
 (modules_without_implementation
  int_id_intf
  parse_env_intf
  ast_index_intf
  checker_intf
  diag_intf
  checker_report_intf
  diag_core_intf)
 (libraries core_unix menhirLib yojson)
 (preprocess
  (pps ppx_inline_test)))
